fixing scrollbar size
fixing scrollbar size

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,7 +13,8 @@ input, textarea
 
 .form-group
     margin: 1rem
-
+.mCSB_inside>.mCSB_container
+        margin-right: 16px
 
 .form-control:disabled, .form-control[readonly]
     background-color: rgba(255, 255, 255, 0.7803921568627451)
